fix(theme): adjust z-index for active code group marker

--- a/src/client/theme-default/styles/components/vp-code-group.css
+++ b/src/client/theme-default/styles/components/vp-code-group.css
@@ -56,7 +56,7 @@
   right: 8px;
   bottom: -1px;
   left: 8px;
-  z-index: 10;
+  z-index: 1;
   height: 1px;
   content: '';
   background-color: transparent;
